Added Input of float values

--- a/Mul/Mul.vcxproj
+++ b/Mul/Mul.vcxproj
@@ -146,6 +146,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InputFunctions.h" />
+    <ClCompile Include="InputFuntions.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
